Tela de notificações estilizadas, correção visual em excluir conta em meu perfil, ajustes alheios

--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -388,3 +388,9 @@ section.duvida-por-tema p {
    text-decoration: none;
 }
 
+/* Notificações */
+
+.link-notificacao:hover {
+   text-decoration: none;
+}
+
