--- a/templates/products/my-products.html
+++ b/templates/products/my-products.html
@@ -15,8 +15,9 @@
 {% endfor %}
 
 <section class="container text-center mb-5 box-shadow pt-5 pb-3">
-    <div>
-        <h1 class="display-4 text-primary mb-5">Meus Anúncios</h1>
+    <div class="mb-5">
+        <h1 class="display-4 text-primary">Meus Anúncios</h1>
+        <span class="h6">Meus produtos anunciados</span>
     </div>
     <div class="row">
         <div class="col" id="produtos" data-children="produto">
