--- a/templates/products/products_favourite_list.html
+++ b/templates/products/products_favourite_list.html
@@ -6,8 +6,9 @@
 
 
 <section class="container text-center mb-5 box-shadow pt-5 pb-3">
-    <div>
-        <h1 class="display-4 text-primary mb-5">Meus Favoritos</h1>
+    <div class="mb-5">
+        <h1 class="display-4 text-primary">Meus Favoritos</h1>
+        <span class="h6">Meus produtos favoritados</span>
     </div>
     <div class="row">
         <div class="col" id="produtos" data-children="produto">
