--- a/templates/products/produtosRequisitados.html
+++ b/templates/products/produtosRequisitados.html
@@ -1,48 +1,108 @@
 {%  extends 'base.html'%}
-
+{% load static %}
 {% block title %} Produtos Requisitados/Alugados {% endblock %}
 
 {% block main %}
-    <div class="container">
 
-        <div>
-                    {% for message in messages %}
-                    <div class="alert alert-success alert-dismissible fade show" role="alert">
-                        {{ message }}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
+<section class="container box-shadow p-3 pb-5">
 
-                    {% endfor %}
+    <div class="text-center mb-5">
+        <h1 class="display-4 text-primary">Propostas</h1>
+        <span class="h6">Aqui você encontra todas as suas propostas</span>
+    </div>
+    <div class="row justify-content-center">
+
+
+
+        <div class="col-6">
+
+            <div class="text-center ml-5">
+                <h5 class="">Alugados</h5>
+            </div>
         </div>
-    <div class="row">
-       {% for alugado in alugados %}
-            {% if alugado.confirmado %}
-        <div class="col">
-               <a href="{% url 'detalhar_aluguel' alugado.id %}"> <p> {{ alugado.produto.nome }} </p> </a>
-               <a href="{% url 'detalhar_aluguel' alugado.id %}">
-                    <image src="{{ alugado.produto.get_photo_url }}" width="150" height="100" />
-               </a>
-              
+
+        <div class="col-6">
+
+            <div class="text-center mr-5">
+                <h5 class="">Propostas</h5>
+            </div>
         </div>
-            {% else %}
-        <div class="col">
-                <a href="{% url 'detalhar_aluguel' alugado.id %}"> <p> {{ alugado.produto.nome }} </p> </a>
-                <a href="{% url 'detalhar_aluguel' alugado.id %}">
-                    <image src="{{ alugado.produto.get_photo_url }}" width="150" height="100" />
-                </a>
-                
-        </div>
-            {% endif %}
+        {% for alugado in alugados %}
+        {% if alugado.confirmado %}
+
+        <li class="list-group-item col-5 mr-5" style="border-radius: 10px;">
+
+            <div class="row col-12 align-items-center justify-content-md-around text-center">
+
+                <div class="col-md-3 col-12">
+                    <a href="{% url 'detalhar_aluguel' alugado.id %}">
+                        <image class="rounded" src="{{ alugado.produto.get_photo_url }}" width="150" height="100" />
+                    </a>
+                </div>
+
+                <div class="col-md-3 col-12">
+                    <a href="{% url 'detalhar_aluguel' alugado.id %}">
+                        <p> {{ alugado.produto.nome }} </p>
+                    </a>
+                </div>
+
+
+            </div>
+        </li>
+        {% endif %}
         {% empty %}
-        <h4>Você não tem produtos pendentes!</h4>
-
+        <li class="list-group-item mt-3 p-5 mr-5" style="border-radius: 10px;">
+            <div class="text-center mt-3">
+                <h4>Você não tem produtos alugados!<span><img style="width: 50px;"
+                            src="{% static 'images/chat-icone.png' %}" alt=""></span></h4>
+            </div>
+        </li>
         {% endfor %}
 
+        {% for alugado in alugados %}
+        {% if alugado.confirmado%}
+        {% else %}
+
+        <li class="list-group-item col-5" style="border-radius: 10px;">
+            <div class="row col-12 align-items-center justify-content-md-around text-center">
+
+                <div class="col-md-3 col-12">
+                    <a href="{% url 'detalhar_aluguel' alugado.id %}">
+                        <image class="rounded" src="{{ alugado.produto.get_photo_url }}" width="150" height="100" />
+                    </a>
+                </div>
+
+                <div class="col-md-3 col-12">
+                    <a href="{% url 'detalhar_aluguel' alugado.id %}">
+                        <p> {{ alugado.produto.nome }} </p>
+                    </a>
+                </div>
+
+
+
+            </div>
+    </div>
+    </li>
+    {% endif %}
+
+    {% empty %}
+    <li class="list-group-item mt-3 p-5" style="border-radius: 10px;">
+        <div class="text-center mt-3">
+            <h4>Você não tem proposta pra aluguel!<span><img style="width: 50px;"
+                        src="{% static 'images/chat-icone.png' %}" alt=""></span></h4>
+        </div>
+    </li>
 
     </div>
+
+
+    {% endfor %}
+
     </div>
+
+    </div>
+
+</section>
+
 
 {% endblock %}
-
