--- a/templates/base.html
+++ b/templates/base.html
@@ -89,6 +89,12 @@
               </div>
 
               <div class="arredondar-linha">
+                <a class="dropdown-item" href="{% url 'produtos_requisitados' %}">
+                  <i>Suas Propostas</i>
+                  <img class="ml-2" src="{% static 'images/proposta-icone.png' %}" alt="icone chat"></a>
+              </div>
+
+              <div class="arredondar-linha">
                 <a class="dropdown-item" href="{% url 'perguntasFrequentes' %}">
                   <i>Ajuda e suporte</i>
                   <img src="{% static 'images/icone-ajuda-2.ico' %}" class="ml-1" alt="icone ajuda"></a>
