--- a/templates/products/products-detail.html
+++ b/templates/products/products-detail.html
@@ -42,16 +42,22 @@
 		</div>
 
 		<div class="d-flex align-items-center">
-			<div class="">
+			<div>
 				{% if is_favourite %}
 				<a href="{% url 'favourite_products' id=product.id %}">
-					<img style="width: 40px;" src="{% static 'images/coracao-cheio.ico' %}" alt="">
+					<img style="width: 30px;" src="{% static 'images/coracao-cheio.ico' %}" alt="">
 				</a>
 				{% else %}
 				<a href="{% url 'favourite_products' id=product.id %}">
-					<img style="width: 40px;" src="{% static 'images/coracao-vazio.ico' %}" alt="">
+					<img style="width: 30px;" src="{% static 'images/coracao-vazio.ico' %}" alt="">
 				</a>
 				{% endif %}
+			</div>
+
+			<div>
+				<a href="{% url 'denuncia' product.id %}">
+					<img style="width: 30px;" class="ml-2" src="{% static 'images/icone-denunciar.ico' %}" alt="">
+				</a>
 			</div>
 		</div>
 
