Tela de alugar e alugar produto estilizadas, correção na tela de notificações

--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -402,4 +402,11 @@ section.duvida-por-tema p {
    text-decoration: none;
 }
 
+/* Alugar Produto (data) */
+
+.span-campo span{
+   font-weight: normal; 
+   font-size: 13px; 
+   color: #A9A9A9;
+}
 
