--- a/templates/notifications/notifications.html
+++ b/templates/notifications/notifications.html
@@ -57,7 +57,7 @@
                 <div class="row justify-content-between align-items-center">
 
                     <img style="width: 38px; height: 35px;" src="{% static 'images/proposta-aceita-2.png' %}" alt="">
-                    <h6>Sua proposta de aluguel foi aceita!</h6>
+                    <h6>Sua proposta de aluguel foi aceita</h6>
                     <a href="{% url 'delete_notification' notification.id %}" class="delete"><img style="width: 20px;"
                             src="{% static 'images/icone-lixeira.ico' %}" alt=""></a>
                 </div>
@@ -67,8 +67,8 @@
                 {% if notification.notification_type == 4 %}
                 <div class="row justify-content-between align-items-center">
 
-                    <img style="width: 38px; height: 35px;" src="{% static 'images/avaliar-notificacoes.ico' %}" alt="">
-                    <a href="{% url 'avaliacoes_pendentes' %}" class="nav-link">Avalie a sua experiencia com a
+                    <img style="width: 35px; height: 32px;" src="{% static 'images/avaliar-notificacoes.ico' %}" alt="">
+                    <a href="{% url 'avaliacoes_pendentes' %}" style="color: #CECA17; font-weight: 500;" class="nav-link">Avalie a sua experiencia com a
                         negociação</a>
 
                     <a href="{% url 'delete_notification' notification.id %}" class="delete"><img style="width: 20px;"
@@ -80,8 +80,7 @@
                 <div class="row justify-content-between align-items-center">
 
                     <img style="width: 38px; height: 35px;" src="{% static 'images/proposta-recusada.png' %}" alt="">
-                    <a href="{% url 'avaliacoes_pendentes' %}" class="nav-link">Sua proposta de aluguel foi
-                        cancelada</a>
+                    <h6>Sua proposta de aluguel foi cancelada</h6>
 
                     <a href="{% url 'delete_notification' notification.id %}" class="delete"><img style="width: 20px;"
                             src="{% static 'images/icone-lixeira.ico' %}" alt=""></a>
