--- a/templates/products/alugarProduto.html
+++ b/templates/products/alugarProduto.html
@@ -6,16 +6,51 @@
 {% block title %} Alugar{% endblock %}
 
 {% block main %}
-<body>
-<h3> Alugar</h3>
+
+<section class="container box-shadow p-3 pb-5">
+
+    <div class="text-center mb-5">
+        <h1 class="display-4 text-primary">Solicitação de Aluguel</h1>
+        <span class="h6">Preencha o período que pretende ficar com o produto</span>
+    </div>
+
+    <div class="row justify-content-center">
+
+        <div class="p-5 col-12 col-lg-7" style="border-radius: 20px; color: rgb(74, 74, 74); font-weight: bold;">
+
+            <div>
+                <h3 class="h4">Período</h3>
+                <span style="font-weight: normal; font-size: 13px; color: #A9A9A9;">Informe a data que você irá pegar e
+                    a data que irá entregar o produto.</span>
+            </div>
+
+            <div class="mt-4 span-campo">
+
+                <form method="POST" action="submit" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form|bootstrap }}
+                    <div class="mt-4">
+                        <button type="submit" id="btnSalvar" style="border-radius: 30px;"
+                            class="btn btn-block btn-primary py-2">Finalizar Solicitação</button>
+                    </div>
+                    <div class="mt-2">
+                        <a href="{% url 'alugar' user.id %}" style="border-radius: 30px;"
+                            class="btn btn-block btn-primary py-2"> Passo Anterior</a>
+                    </div>
+
+
+                </form>
+
+            </div>
+
+        </div>
+    </div>
 
 
 
-<form method="POST" action="submit" enctype="multipart/form-data">
-    {% csrf_token %}
-        {{ form|bootstrap }}
-        <button type="submit" id="btnSalvar" class="btn btn-secondary"> Concluir </button>
-        <a href="{% url 'alugar' user.id %}" class="btn btn-secondary"> Voltar</a>
-</form>
+
+</section>
+
+
 
 {% endblock %}
