separando listar alugados e requisitados

--- a/templates/products/produtosRequisitados.html
+++ b/templates/products/produtosRequisitados.html
@@ -20,7 +20,6 @@
         </div>
 
         {% for alugado in alugados %}
-        {% if alugado.confirmado %}
 
         <a class="link-sem-cor-azul-sem-traco col-md-6 col-12 mr-md-2 mt-4" style="font-weight: 600;"
             href="{% url 'detalhar_aluguel' alugado.id %}">
@@ -38,7 +37,6 @@
 
             </li>
         </a>
-        {% endif %}
         {% empty %}
         <li class="list-group-item mt-4 p-5 mr-md-4 mx-2" style="border-radius: 5px;">
             <div class="text-center mt-3">
@@ -61,21 +59,19 @@
 
 
 
-        {% for alugado in alugados %}
-        {% if alugado.confirmado%}
-        {% else %}
+        {% for proposta in propostas %}
 
         <a class="link-sem-cor-azul-sem-traco col-md-6 col-12 mr-md-2 mt-4" style="font-weight: 600;"
-            href="{% url 'detalhar_aluguel' alugado.id %}">
+            href="{% url 'detalhar_aluguel' proposta.id %}">
             <li class="list-group-item" style="border-radius: 5px;">
                 <div class="row col-12 align-items-center justify-content-md-around text-center">
 
                     <div class="col-md-3 col-12">
-                        <image class="rounded" src="{{ alugado.produto.get_photo_url }}" width="150" height="100" />
+                        <image class="rounded" src="{{ proposta.produto.get_photo_url }}" width="150" height="100" />
                     </div>
 
                     <div class="col-md-5 col-12 mt-md-0 mt-4">
-                        <p> {{ alugado.produto.nome }} </p>
+                        <p> {{ proposta.produto.nome }} </p>
                     </div>
 
 
@@ -84,7 +80,6 @@
 
             </li>
         </a>
-        {% endif %}
 
         {% empty %}
         <li class="list-group-item mt-4 p-5 mx-2" style="border-radius: 5px;">
